# Docs:
# https://click.palletsprojects.com/en/8.0.x/setuptools/
# https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
# https://setuptools.readthedocs.io/en/latest/build_meta.html

[metadata]
name            = pulse
version         = 0.1.0
description     = CLI interface for PulseAudio
author_email    = nazadelucca@gmail.com

[options]
packages = find:

python_requires = >=3.10

install_requires =
    click           == 8.1.7
    desktop-notifier== 3.5.6
    pulsectl        == 23.5.2

[options.entry_points]
console_scripts =
    pulse = pulse.cli:cli
